--- a/protobuf-builder.cabal
+++ b/protobuf-builder.cabal
@@ -8,6 +8,8 @@ maintainer: andrew.thaddeus@gmail.com
 copyright: 2022 Andrew Martin
 category: Data
 extra-source-files: CHANGELOG.md
+license: BSD-3-Clause
+license-file: LICENSE
 
 library
   exposed-modules: Protobuf.Builder
